--- a/doc/tutorial/gimli.bib
+++ b/doc/tutorial/gimli.bib
@@ -1,9 +1,9 @@
-% This file was created with JabRef 2.4.2.
+% This file was created with JabRef 2.7.
 % Encoding: Cp1252
 
 @ARTICLE{avdeevaavdeev06,
   author = {Anna Avdeeva and Dmitry Avdeev},
-  title = {A limited-memory quasi-Newton inversion for 1D magnetotellurics},
+  title = {{A} limited-memory quasi-{N}ewton inversion for 1{D} magnetotellurics},
   journal = {Geophysics},
   year = {2006},
   volume = {71},
@@ -15,7 +15,7 @@
 
 @ARTICLE{claerbout73,
   author = {J. F. Claerbout and F. Muir},
-  title = {Robust modeling with erratic data},
+  title = {{R}obust modeling with erratic data},
   journal = {Geophysics},
   year = {1973},
   volume = {38},
@@ -27,8 +27,8 @@
 
 @ARTICLE{cpc87,
   author = {S. C. Constable and R. L. Parker and C. G. Constable},
-  title = {Occam's inversion: A practial algorithm for generating smooth models
-	from electromagnetic sounding data},
+  title = {{O}ccam's inversion: {A} practial algorithm for generating smooth
+	models from electromagnetic sounding data},
   journal = {Geophysics},
   year = {1987},
   volume = {52},
@@ -38,7 +38,7 @@
 }
 
 @BOOK{davis,
-  title = {Direct Methods for Sparse Linear Systems},
+  title = {{D}irect {M}ethods for {S}parse {L}inear {S}ystems},
   publisher = {SIAM},
   year = {2006},
   author = {T. A. Davis},
@@ -51,14 +51,14 @@
 @INBOOK{dijkstra,
   chapter = {1},
   pages = {269-271},
-  title = {Numerische Mathematik},
+  title = {{N}umerische {M}athematik},
   year = {1959},
   author = {E. W. Dijkstra}
 }
 
 @ARTICLE{farqu04,
   author = {C. G. Farquharson and D. W. Oldenburg},
-  title = {A comparison of automatic techniques for estimating the regularization
+  title = {{A} comparison of automatic techniques for estimating the regularization
 	parameter in non-linear inverse problems},
   journal = {Geophys. J. Int.},
   year = {2004},
@@ -70,8 +70,8 @@
 
 @ARTICLE{farq98,
   author = {C. G. Farquharson and D. W. Oldenburg},
-  title = {Non-linear inversion using general measures of data misfit and model
-	structure},
+  title = {{N}on-linear inversion using general measures of data misfit and
+	model structure},
   journal = {Geophys. J. Int.},
   year = {1998},
   volume = {134},
@@ -82,7 +82,7 @@
 
 @ARTICLE{friedel03,
   author = {S. Friedel},
-  title = {Resolution, stability and effiency of resistivity tomography estimated
+  title = {{R}esolution, stability and effiency of resistivity tomography estimated
 	from a generalized inverse approach},
   journal = {Geophys. J. Int.},
   year = {2003},
@@ -94,8 +94,8 @@
 
 @PHDTHESIS{guentherdiss,
   author = {T. G{\"u}nther},
-  title = {Inversion Methods and Resolution Analysis for the 2D/3D Reconstruction
-	of Resistivity Structures from DC Measurements},
+  title = {{I}nversion {M}ethods and {R}esolution {A}nalysis for the 2{D}/3{D}
+	{R}econstruction of {R}esistivity {S}tructures from {DC} {M}easurements},
   school = {University of Mining and Technology Freiberg},
   year = {2004},
   note = {available at \url{http://fridolin.tu-freiberg.de}}
@@ -103,7 +103,7 @@
 
 @INPROCEEDINGS{guenther06cmwr,
   author = {T. G{\"u}nther and L. Bentley and M. Hirsch},
-  title = {A new joint inversion algorithm applied to the interpretation of
+  title = {{A} new joint inversion algorithm applied to the interpretation of
 	dc resistivity and refraction data},
   booktitle = {Ext. Abstract, Workshop for Computational Methods in Water Resources,
 	18.-22.6.06 Kopenhagen(Denmark).},
@@ -113,7 +113,7 @@
 @INPROCEEDINGS{guerue08nearsurface,
   author = {Thomas G{\"u}nther and Mike M{\"u}ller-Petke and Marian Hertrich
 	and Carsten R{\"u}cker},
-  title = {The role of transformation functions in geophysical inversion},
+  title = {{T}he role of transformation functions in geophysical inversion},
   booktitle = {Ext. Abstract, EAGE Near Surface Geophysics Workshop. 15.-17.9.08,
 	Krakow (Poland)},
   year = {2008},
@@ -123,7 +123,7 @@
 
 @INPROCEEDINGS{guerue06nearsurface,
   author = {T. G{\"u}nther and C. R{\"u}cker},
-  title = {A general approach for introducing information into inversion and
+  title = {{A} general approach for introducing information into inversion and
 	examples from dc resistivity inversion},
   booktitle = {Ext. Abstract, EAGE Near Surface Geophysics Workshop. 4.-6.9.06,
 	Helsinki(Finland)},
@@ -132,7 +132,7 @@
 
 @INPROCEEDINGS{guerue06sageep,
   author = {T. G{\"u}nther and C. R{\"u}cker},
-  title = {A new joint inversion approach applied to the combined tomography
+  title = {{A} new joint inversion approach applied to the combined tomography
 	of dc resistivity and seismic refraction data.},
   booktitle = {Ext. Abstract, 19. EEGS annual meeting (SAGEEP), 02.-06.04.2006;
 	Seattle, USA.},
@@ -141,8 +141,8 @@
 
 @ARTICLE{guentherruecker06,
   author = {T. G{\"u}nther and C. R{\"u}cker and K. Spitzer},
-  title = {3-d modeling and inversion of DC resistivity data incorporating topography
-	- Part {II}: Inversion},
+  title = {3-d modeling and inversion of {DC} resistivity data incorporating
+	topography - {P}art {II}: {I}nversion},
   journal = {Geophys. J. Int.},
   year = {2006},
   volume = {166},
@@ -154,7 +154,8 @@
 
 @ARTICLE{haber05,
   author = {E. Haber},
-  title = {Quasi-Newton methods for large-scale electromagnetic inversion problems},
+  title = {{Q}uasi-{N}ewton methods for large-scale electromagnetic inversion
+	problems},
   journal = {Inverse Problems},
   year = {2005},
   volume = {21},
@@ -165,8 +166,8 @@
 
 @PHDTHESIS{igel07,
   author = {J. Igel},
-  title = {On the Small-Scale Variability of Electrical Soil Properties and
-	its Influence on Geophysical Measurements},
+  title = {{O}n the {S}mall-{S}cale {V}ariability of {E}lectrical {S}oil {P}roperties
+	and its {I}nfluence on {G}eophysical {M}easurements},
   school = {University of Frankfurt/Main},
   year = {2007},
   file = {diss_jigel.pdf:D\:\\Guenther.T\\papers\\misc\\diss_jigel.pdf:PDF},
@@ -176,7 +177,7 @@
 
 @ARTICLE{liold03,
   author = {Y. Li and D. W. Oldenburg},
-  title = {Fast inversion of large-scale magnetic data using wavelet transforms
+  title = {{F}ast inversion of large-scale magnetic data using wavelet transforms
 	and a logarithmic barrier method},
   journal = {Geophys. J. Int.},
   year = {2003},
@@ -209,9 +210,20 @@
   url = {http://www.blackwell-synergy.com/doi/pdf/10.1046/j.1365-246X.2003.01766.x}
 }
 
+@ARTICLE{marquardt,
+  author = {D. W. Marquardt},
+  title = {{A}n algorithm for least-squares estimation of non-linear parameters},
+  journal = {J. Soc. Ind. App. Math.},
+  year = {1963},
+  volume = {11},
+  pages = {431-441},
+  owner = {Guenther.T},
+  timestamp = {2011.09.28}
+}
+
 @ARTICLE{mejuguentherhodson,
   author = {M. Meju and T. G{\"u}nther and T. Hodson},
-  title = {Controls on methane gas distribution in a covered wetland-hosted
+  title = {{C}ontrols on methane gas distribution in a covered wetland-hosted
 	landfill site as inferred from integrated analyses of electrical
 	resistivity and hydrogeochemical data},
   journal = {Journal of Geophysical Research - Biogeosciences},
@@ -220,7 +232,7 @@
 
 @ARTICLE{OGE93,
   author = {D. W. Oldenburg and P. R. McGillivray and R. G. Ellis},
-  title = {Generalized subspace methods for large-scale inverse problems},
+  title = {{G}eneralized subspace methods for large-scale inverse problems},
   journal = {Geophys. J. Int.},
   year = {1993},
   volume = {114},
@@ -232,9 +244,9 @@
 @INPROCEEDINGS{paasche06seg,
   author = {Paasche, H. and Tronicke, J. and Günther, T. and Maurer, H. and Green,
 	A. and Holliger, K.},
-  title = {Detailed 3-D characterization of a shallow alluvial aquifer: Integrating
-	multi-scale geophysical and hydrological data by fuzzy c-means cluster
-	analysis},
+  title = {{D}etailed 3-{D} characterization of a shallow alluvial aquifer:
+	{I}ntegrating multi-scale geophysical and hydrological data by fuzzy
+	c-means cluster analysis},
   booktitle = {Ext. abstract, SEG Hydrogeophysics Workshop, 31.7.-2.8.2006; Vancouver/BC,
 	Canada},
   year = {2006}
@@ -242,7 +254,7 @@
 
 @ARTICLE{port99,
   author = {O. Portniaguine and M. S. Zhdanov},
-  title = {Focusing geophysical inversion images},
+  title = {{F}ocusing geophysical inversion images},
   journal = {Geophysics},
   year = {1999},
   volume = {64},
@@ -254,8 +266,8 @@
 
 @INCOLLECTION{triangle,
   author = {Jonathan Richard Shewchuk},
-  title = {Triangle: {E}ngineering a {2D} {Q}uality {M}esh {G}enerator and {D}elaunay
-	{T}riangulator},
+  title = {{T}riangle: {E}ngineering a {2D} {Q}uality {M}esh {G}enerator and
+	{D}elaunay {T}riangulator},
   booktitle = {Applied Computational Geometry: Towards Geometric Engineering},
   publisher = {Springer-Verlag},
   year = {1996},
@@ -271,7 +283,7 @@
 
 @MISC{tetgen,
   author = {Hang Si},
-  title = {\textsc{TetGen}: A 3D Delaunay Tetrahedral Mesh Generator},
+  title = {\textsc{TetGen}: {A} 3{D} {D}elaunay {T}etrahedral {M}esh {G}enerator},
   year = {2003},
   note = {\url{http://tetgen.berlios.de}},
   owner = {halbmy},
@@ -281,7 +293,7 @@
 
 @UNPUBLISHED{tarantola01,
   author = {A. Tarantola},
-  title = {Logarithmic parameters},
+  title = {{L}ogarithmic parameters},
   note = {\url{http://web.ccr.jussieu.fr/tarantola/Files/Professional/Papers_PDF/Music.pdf}},
   year = {2001},
   howpublished = {unpublished manuscript},
@@ -291,7 +303,7 @@
 }
 
 @BOOK{tarantola,
-  title = {Inverse Problem Theory},
+  title = {{I}nverse {P}roblem {T}heory},
   publisher = {Elsevier},
   year = {1978},
   author = {A. Tarantola},
@@ -302,7 +314,7 @@
 
 @ARTICLE{tarantola82,
   author = {A. Tarantola and B. Valette},
-  title = {Generalized nonlinear inverse problems solved using the least squares
+  title = {{G}eneralized nonlinear inverse problems solved using the least squares
 	criterion},
   journal = {Reviews of Geophysics and Space Physics},
   year = {1982},
@@ -315,7 +327,7 @@
 }
 
 @BOOK{zhdanov02,
-  title = {Geophysical Inverse Theory and Regularization Problems},
+  title = {{G}eophysical {I}nverse {T}heory and {R}egularization {P}roblems},
   publisher = {Elsevier},
   year = {2002},
   author = {M. S. Zhdanov},
@@ -327,8 +339,8 @@
 
 @ARTICLE{zhdanovtolstaya06,
   author = {Michael S. Zhdanov and Ekaterina Tolstaya},
-  title = {A novel approach to the model appraisal and resolution analysis of
-	regularized geophysical inversion},
+  title = {{A} novel approach to the model appraisal and resolution analysis
+	of regularized geophysical inversion},
   journal = {Geophysics},
   year = {2006},
   volume = {71},
