--- a/doc/tutorial/gimli-tutorial.tex
+++ b/doc/tutorial/gimli-tutorial.tex
@@ -24,6 +24,15 @@ Carsten R{\"u}cker\thanks{Institute of Geology and Geophysics, University of Lei
 \newcommand{\sperre}{\,\rule{1ex}{2ex}}
 \newcommand{\mycomment}[2]{\sperre{\em #1: #2}\sperre}
 
+\lstloadlanguages{[Visual]C++,[ISO]C++,Python}
+\lstset{language=[ISO]C++}
+\lstdefinelanguage{C++}{morekeywords={RVector,RMatrix,ModellingBase}}
+%\lstset{numbers=left,numberstyle=\tiny}
+%\lstset{basicstyle=\small,keywordstyle=\color{red}}
+\lstset{basicstyle=\sffamily\small,keywordstyle=\bfseries}
+\lstset{frame=shadowbox,commentstyle=\color{blue}}
+\lstset{morekeywords={RVector,RMatrix,ModellingBase,RSparseMapMatrix,SparseMatrix}}
+
 \begin{document}
 \maketitle
 \begin{abstract}
